--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
       <title>Odin Landing Page</title>
   </head>
   <body>
-    
+    <div class="header">
+      <div class="header-logo">Header Logo</div>
+      <ul>
+        <li>One</li>
+        <li>Two</li>
+        <li>Three</li>
+      </ul>
+    </div>
   </body>
 </html>
