Fix links in header

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div class="header">
       <div class="header-logo">Header Logo</div>
       <ul>
-        <li><a>One</a></li>
-        <li><a>Two</a></li>
-        <li><a>Three</a></li>
+        <li><a href="">One</a></li>
+        <li><a href="">Two</a></li>
+        <li><a href="">Three</a></li>
       </ul>
     </div>
   </body>
