Create footer with styles

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
         <li><a href="">Three</a></li>
       </ul>
     </div>
+    <div class="footer">Copyright © The Odin Project 2021</div>
   </body>
 </html>
