Create hero flexbox
Include header within hero and move some variables from header
to hero. Edit HTML to include <div class="hero">

--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
       <title>Odin Landing Page</title>
   </head>
   <body>
-    <div class="header">
-      <div class="header-logo">Header Logo</div>
-      <ul>
-        <li><a href="">One</a></li>
-        <li><a href="">Two</a></li>
-        <li><a href="">Three</a></li>
-      </ul>
+    <div class="hero">
+      <div class="header">
+        <div class="header-logo">Header Logo</div>
+        <ul>
+          <li><a href="">One</a></li>
+          <li><a href="">Two</a></li>
+          <li><a href="">Three</a></li>
+        </ul>
+      </div>
     </div>
+
     <div class="footer">Copyright © The Odin Project 2021</div>
   </body>
 </html>
