Add image to hero and create flex box

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
           <li><a href="">Three</a></li>
         </ul>
       </div>
+      <div class="hero-content">
+        <div class="content-text">
+            testing testing
+        </div>
+        <img src="img/placeholder.jpg" alt="A cup and laptop on white table">
+      </div>
     </div>
 
     <div class="footer">Copyright © The Odin Project 2021</div>
