--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
       </div>
       <div class="hero-content">
         <div class="content-text">
-            testing testing
+            <div class="hero-main-text">
+                This website is awsome
+            </div>
         </div>
         <img src="img/placeholder.jpg" alt="A cup and laptop on white table">
       </div>
