--- a/index.html
+++ b/index.html
@@ -20,9 +20,16 @@
       </div>
       <div class="hero-content">
         <div class="content-text">
-            <div class="hero-main-text">
-                This website is awsome
-            </div>
+          <div class="hero-main-text">
+               This website is awsome
+           </div>
+           <div class="hero-2nd-text">
+            This website has some subtext that goes here under the main title. It's a 
+            smaller font and the color is lower contrast
+           </div>
+           <div class="flex-button">
+             <div class="action-button">Sign Up</div>
+           </div>
         </div>
         <img src="img/placeholder.jpg" alt="A cup and laptop on white table">
       </div>
