--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
       </div>
     </div>
 
+    <div class="info">
+      <div class="info-header">Some random information</div>
+      <div class="info-body">
+        
+      </div>
+    </div>
+
     <div class="footer">Copyright © The Odin Project 2021</div>
   </body>
 </html>
