Add images for information

--- a/index.html
+++ b/index.html
@@ -38,7 +38,18 @@
     <div class="info">
       <div class="info-header">Some random information</div>
       <div class="info-body">
-        
+        <div>
+          <img src="img/red.png" alt="The color red">
+        </div>
+        <div>
+         <img src="img/red.png" alt="The color red">
+        </div>
+        <div>
+         <img src="img/red.png" alt="The color red">
+        </div>
+        <div>
+        <img src="img/red.png" alt="The color red">
+        </div>
       </div>
     </div>
 
