Finish styling info boxes using flexbox

--- a/index.html
+++ b/index.html
@@ -40,15 +40,19 @@
       <div class="info-body">
         <div>
           <img src="img/red.png" alt="The color red">
+          <div class="info-text">this is some subtext under an illustration or image</div>
         </div>
         <div>
          <img src="img/red.png" alt="The color red">
+         <div class="info-text">this is some subtext under an illustration or image</div>
         </div>
         <div>
          <img src="img/red.png" alt="The color red">
+         <div class="info-text">this is some subtext under an illustration or image</div>
         </div>
         <div>
         <img src="img/red.png" alt="The color red">
+        <div class="info-text">this is some subtext under an illustration or image</div>
         </div>
       </div>
     </div>
