Add quote content section

--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
       </div>
     </div>
 
+    <div class="quote-part">
+        <div class="quote">
+
+        </div>
+        <div class="author">- Thor, God of Thunder</div>
+    </div>
+
     <div class="footer">Copyright © The Odin Project 2021</div>
   </body>
 </html>
