--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <link rel="stylesheet" href="style.css">
-      <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
-      <title>Odin Landing Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <title>Odin Landing Page</title>
   </head>
   <body>
     <div class="hero">
@@ -59,9 +59,9 @@
 
     <div class="quote-part">
         <div class="quote">
-          This is an inspiring quote, or a testimonial from a customer. Maybe
+          <i>This is an inspiring quote, or a testimonial from a customer. Maybe
           it's just filling up space, or mayber people will actually read it. 
-          Who knows? All I know is that it looks nice.
+          Who knows? All I know is that it looks nice.</i>
         </div>
         <div class="author">- Thor, God of Thunder</div>
     </div>
