--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
         <div class="author">- Thor, God of Thunder</div>
     </div>
 
+    <div class="call-to-action">
+      testing testing
+    </div>
+
     <div class="footer">Copyright © The Odin Project 2021</div>
   </body>
 </html>
