Edit call to action button in call to action

--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
     </div>
 
     <div class="call-to-action">
-      testing testing
+      <div class="action-text">
+
+      </div>
+      <div class="action-button">Sign Up</div>
     </div>
 
     <div class="footer">Copyright © The Odin Project 2021</div>
