--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 
     <div class="call-to-action">
       <div class="action-text">
-        <div>Call to action! It's time!</div>
-        <div>Sign up for our product by clicking that button right over there!</div>
+        <div class="header-logo">Call to action! It's time!</div>
+        <div class="hero-2nd-text">Sign up for our product by clicking that button right over there!</div>
       </div>
       <div class="action-button">Sign Up</div>
     </div>
